@@ -1,5 +1,14 @@
 2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* mime-pgp.el (mime-pgp-decrypt-when-preview): New customizable
+	variable.
+	(mime-display-multipart/pgp-encrypted): New function.
+
+	* semi-setup.el: Define autoload and mime-preview-codition's
+	settings for mime-display-multipart/pgp-encrypted.
+
+2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* mime-edit.el (mime-edit-encrypt-pgp-nonmime): New function.
 
 2012-10-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
